# NearBridge

./: README.md
.github/: pull_request_template.md
.github/workflows/: sonarcloud.yml
api/: .env  index.ts  package-lock.json  package.json  server.ts  tsconfig.json
api/controller/: chain.controller.ts
api/data/: chain.data.ts
api/src/: index.ts
api/src/controller/: chain.controller.ts
api/src/data/: chain.data.ts
api/src/router/: chain.router.ts
api/src/types/: global.d.ts
bridge/near/: .gitignore  Cargo.toml  readme.md
bridge/near/src/: lib.rs
bridge/near/src/tests/: mod.rs
bridge/nearclient/: contract_call_example.go  contract_caller.go  go.mod  go.sum
bridge/nearclient/contract_caller/: contract_caller.go
bridge/networklistener/: .gitignore  go.mod  go.sum  main.go  playground.go
bridge/networklistener/chainlistener/: ChainListener.go  NearListener.go  main.go
bridge/networklistener/contracts/: Bridge.go  Bridge.sol  ContractCaller.go
bridge/networklistener/controller/: BridgeController.go
bridge/networklistener/data/: BridgeControllerData.go  Chain.go
bridge/networklistener/db/: db.go  insert.go  mongo.go  read.go
bridge/networklistener/middlewares/: auth.go
bridge/networklistener/nearclient/: contractCallExample.go  go.mod
bridge/networklistener/response/: HttpResponse.go
bridge/networklistener/router/: router.go
bridge/networklistener/utils/: utils.go
bridge/solidity/: Bridge.sol
frontend/platform/: .env  auth.ts  package-lock.json  package.json
frontend/platform/app/: layout.tsx
(+17 files in other folders)
