[package]
name = "near_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.1.1"
serde = { version = "1.0", features = ["derive"] }
borsh = "0.9"
lazy_static = "1.4"

